finished the footer and added all padding and margins needed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>'
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mali|Permanent+Marker" rel="stylesheet">
@@ -123,44 +123,50 @@
             <!--start of CHOICES-ROW -->
             <tr>
               <td>
-                <table class="choices" width="33.33%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding: 0px; background: #FFFFFF; margin-top: 0px;">
+                <table class="sectionBox" width="550px" height="100%" align="center" cellspacing="0" cellpadding="0" border="0" style=" background: #FFFFFF; margin-top: 0px; margin-bottom: 0px; margin-left: auto; margin-right: auto;">
                   <tr>
-                    <td >
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
-                        <i class="fa fa-plane" aria-hidden="true" style="background: grey; border-radius:50%; width: auto; height: auto; font-size: 60px; padding: 20px; color: white; "></i>
-                      </p>
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; color:#c72442; font-size:25px;" >Explore travel</p>
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; font-size:18px;">with no backout <br> dates for flights</p>
-                    </td>
-                  </tr>
-                </table>
-                <table class="choices" width="33.33%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding: 0px; background: #FFFFFF; margin-top: 0px;">
-                  <tr>
-                    <td >
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
-                        <i class="fa fa-credit-card-alt" aria-hidden="true" style="background: grey; border-radius:50%; width: auto; height: auto; font-size: 50px; padding-left: 20px; padding-right: 20px;
-                        padding-top: 25px; padding-bottom: 25px; color: white; "></i>
-                      </p>
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; color:#c72442; font-size:25px;" >Find gift cards</p>
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; font-size:18px;">from over 130 merchants</p>
-                    </td>
-                  </tr>
-                </table>
-                <table class="choices" width="33.33%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding: 0px; background: #FFFFFF; margin-top: 0px;">
-                  <tr>
-                    <td >
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
-                        <i class="fa fa-shopping-bag" aria-hidden="true" style="background: #c72442; border-radius:50%; width: auto; height: auto; font-size: 60px; padding: 20px; color: white; "></i>
-                      </p>
+                    <td>
+                      <table class="choices" width="33.33%" height="100%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding-left: 5px; padding-right: 5px; background: #FFFFFF; ">
+                        <tr>
+                          <td >
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
+                              <i class="fa fa-plane" aria-hidden="true" style="background: grey; border-radius:50%; width: auto; height: auto; font-size: 60px; padding: 20px; color: white; "></i>
+                            </p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; color:#c72442; font-size:23px;" >Explore travel</p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; font-size:16px;">with no backout <br> dates for flights</p>
+                          </td>
+                        </tr>
+                      </table>
+                      <table class="choices" width="33.33%" height="100%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding-left: 5px; padding-right: 5px; background: #FFFFFF; ">
+                        <tr>
+                          <td >
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
+                              <i class="fa fa-credit-card-alt" aria-hidden="true" style="background: grey; border-radius:50%; width: auto; height: auto; font-size: 50px; padding-left: 20px; padding-right: 20px;
+                              padding-top: 25px; padding-bottom: 25px; color: white; "></i>
+                            </p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; color:#c72442; font-size:23px;" >Find gift cards</p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; font-size:16px;">from over 130 merchants</p>
+                          </td>
+                        </tr>
+                      </table>
+                      <table class="choices" width="33.33%" height="100%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding-left: 5px; padding-right: 5px; background: #FFFFFF; ">
+                        <tr>
+                          <td >
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 40px; text-align:center;">
+                              <i class="fa fa-shopping-bag" aria-hidden="true" style="background: #c72442; border-radius:50%; width: auto; height: auto; font-size: 60px; padding: 20px; color: white; "></i>
+                            </p>
 
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; color:#c72442; font-size:25px;" >Search top deals</p>
-                      <p style="margin-right: auto; margin-left: auto; margin-top: 0;
-                      margin-bottom: 0; text-align:center; font-size:18px;">on over 175,000 <br> everyday items</p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; color:#c72442; font-size:23px;" >Search top deals</p>
+                            <p style="margin-right: auto; margin-left: auto; margin-top: 0;
+                            margin-bottom: 0; text-align:center; font-size:16px;">on over 175,000 <br> everyday items</p>
+                          </td>
+                        </tr>
+                      </table>
                     </td>
                   </tr>
                 </table>
@@ -168,19 +174,19 @@
             </tr>
             <!--end of CHOICES-ROW -->
 
-            <!--start of ALL-CHOICES-ROW -->
+            <!--start of VIEW-ALL-CHOICES-ROW -->
             <tr>
               <td>
-                <table class="allChoices" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding: 40px; background: white; width: 300px; margin-top: 0px;  margin-right: auto; margin-right: auto;">
+                <table class="viewAllChoices" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding: 20px; background: white; width: 300px; margin-top: 0px; margin-bottom: 0px;  margin-right: auto; margin-right: auto;">
                   <tr>
                     <td>
-                      <h1 style="text-align:center; color:#c72442; font-size: 25px; border: 2px solid #c72442; "  >View all choices</h1>
+                      <h1 style="text-align:center; color:#c72442; font-size: 25px; border: 2px solid #c72442; width: 250px;"  >View all choices</h1>
                     </td>
                   </tr>
                 </table>
               </td>
             </tr>
-            <!--end of ALL CHOICES-ROW -->
+            <!--end of VIEW-ALL-CHOICES-ROW -->
 
             <!--start of EXPLORE-MORE-ROW -->
             <tr>
@@ -244,11 +250,28 @@
                           </td>
                         </tr>
                       </table>
-                      <table class="textOnly" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding: 0px 0; background: #44454A; margin-top: 20px; font-size:13px; color: white; width: 565px;">
+                      <table class="imageAndIcons" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding-bottom: 40px; background: #44454A; margin-top: 20px; font-size:13px; color: white; ">
                         <tr>
                           <td>
-                            <img src="https://i.postimg.cc/TPT8H6TM/horses.png" alt="">
-
+                            <table class="image" width="50%" align="left" cellspacing="0" cellpadding="0" border="0" style="padding: 0px; background: #44454A; margin-top: 20px; font-size:13px; color: white;">
+                              <tr>
+                                <td>
+                                  <img src="https://i.postimg.cc/TPT8H6TM/horses.png" alt="">
+                                </td>
+                              </tr>
+                            </table>
+                            <table class="icons" width="50%" align="right" cellspacing="0" cellpadding="0" border="0" style="padding-right: 30px; background: #44454A; margin-top: 20px; font-size:25px; color: white; text-align: right;">
+                              <tr>
+                                <td >
+                                  <i style="color: #44454A; background-color: #E2E2E2; border-radius: 15px; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px;" class="fa fa-facebook" aria-hidden="true"></i>
+                                  <i style="color: #44454A; background-color: #E2E2E2; border-radius: 15px; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px;" class="fa fa-instagram" aria-hidden="true"></i>
+                                  <i style="color: #44454A; background-color: #E2E2E2; border-radius: 15px; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px;" class="fa fa-pinterest-p" aria-hidden="true"></i>
+                                  <i style="color: #44454A; background-color: #E2E2E2; border-radius: 15px; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px;" class="fa fa-youtube-play" aria-hidden="true"></i>
+                                  <i style="color: #44454A; background-color: #E2E2E2; border-radius: 15px; padding-top:5px; padding-bottom:5px; padding-right:10px; padding-left:10px;" class="fa fa-twitter" aria-hidden="true"></i>
+                                  <span style="display: block; font-size:12px; color: white; padding-top: 10px;">View Online | Update Settings</span>
+                                </td>
+                              </tr>
+                            </table>
                           </td>
                         </tr>
                       </table>
