--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
        .container{
          width: 100% !important;
        }
+
+
        .choices {
          width: 100%;
 
@@ -165,7 +167,7 @@
             <!--start of CHOICES-ROW -->
             <tr>
               <td>
-                <table class="sectionBox" width="550px" height="100%" align="center" cellspacing="0" cellpadding="0" border="0" style=" background-color: #FFFFFF !important; margin-top: 0px; margin-bottom: 0px; margin-left: auto; margin-right: auto;">
+                <table class="sectionBox" width="100%" height="100%" align="center" cellspacing="0" cellpadding="0" border="0" style=" background-color: #FFFFFF !important; margin-top: 0px; margin-bottom: 0px; margin-left: auto; margin-right: auto;">
                   <tr>
                     <td>
                       <table class="choices" width="33.33%" height="100%" cellspacing="0" align="left" cellpadding="0" border="0" style="padding-left: 5px; padding-right: 5px; background-color: #FFFFFF; ">
@@ -261,7 +263,7 @@
             <!--start of REDEEM-SMILE-REPEAT-ROW -->
             <tr>
               <td>
-                <table class="redeemSmileRepeat" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding: 0px 0; background-color: #FFFFFF; width: 550px; margin-top: 10px;  margin-bottom: 20px;text-align:center;">
+                <table class="redeemSmileRepeat" width="100%" align="center" cellspacing="0" cellpadding="0" border="0" style="padding: 0px 0; background-color: #FFFFFF; width: 100%; margin-top: 10px;  margin-bottom: 20px;text-align:center;">
                   <tr>
                     <td>
                       <p style=" margin-top: 19px;">
